# agraph-python

./: .gitignore  .project  .pydevproject  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELNOTES  check-version.py  check-version.sh  conda-install.sh  conda-upload.sh  condarc  docs-requirements.txt  fix-header.py  fix_notebook.py  franz  gpg-opts.sh  header.inc  header.py  install-conda.sh  nexus.ca.crt  pip-hack.py  pyproject.toml  pytest.ini  readme.txt  release-process.md  requirements.txt  requirements2.txt  rtd-requirements.txt  setup.py  tox.ini  toxenv-requirements.txt  toxenv.txt  version.py
agraph-http-server/: .cvsignore  Makefile  Makefile.defs  agraph-http-client.asd  agraph-http-server.asd  agraph-http-tests.asd  bench.lisp  load.lisp  start.lisp  test.lisp
agraph-http-server/client/: client.lisp  misc.lisp  packages.lisp  request.lisp
agraph-http-server/lib/salza2/: adler32.lisp  salza2.asd
agraph-http-server/lib/salza2/doc/: index.html
agraph-http-server/python/: repository.py  request.py
agraph-http-server/src/: cursor.lisp  deflate.lisp  formats.lisp  http.lisp  main.lisp  misc.lisp  packages.lisp  prolog.lisp  server.lisp  service.lisp  services.lisp  test.lisp
agraph-http-server/src/scratch/: c-deflate.lisp  compact-wire.lisp  compact.py  zstream.c
agraph-http-server/test/: package.lisp  test.lisp  util.lisp
common/: notation3.py
docs/: Makefile  make.bat
docs/source/: conf.py  future.inv  index.rst  links.inc
docs/source/_static/: custom.css
docs/source/_templates/: page.html
docs/source/lib/: hacks.py  lexer.py
docs/source/tutorial/: doctest_setup.py  example001.rst  example002.rst  example003.rst  example004.rst  example005.rst  example006.rst  example007.rst  example008.rst  example009.rst  example010.rst  example011.rst  example012.rst  example013.rst  example014.rst  example015.rst  example016.rst  setup.rst
docs/src/: api.rst  conf.py  images.inc  index.rst  install.rst  jsonld_tutorial_helper.py  jupyter.welcome.block  substs.inc  tutorial.rst
docs/src/_gen/: franz.openrdf.model.rst  franz.openrdf.query.rst  franz.openrdf.repository.rst  franz.openrdf.rio.rst  franz.openrdf.rst  franz.openrdf.sail.rst  franz.openrdf.util.rst  franz.openrdf.vocabulary.rst  franz.rst  modules.rst
docs/src/_static/: custom.css
docs/src/_templates/: page.html
docs/src/lib/: hacks.py  imports.py  lexer.py
docs/src/tutorial/: doctest_setup.py  example001.rst  example002.rst  example003.rst  example004.rst  example005.rst  example006.rst  example007.rst  example008.rst  example009.rst  example010.rst  example011.rst  example012.rst  example013.rst  example014.rst  example015.rst  example016.rst  example017.rst  example018.rst  example019.rst  example020.rst  fedex.rst  setup.rst
franz/miniclient/: repository.py  test.py
franz/openrdf/model/: literal.py  statement.py  value.py  valuefactory.py
franz/openrdf/query/: dataset.py  query.py
franz/openrdf/repository/: __init__.py  repositoryresult.py
franz/openrdf/rio/: converter.py  rdfformat.py  rdfwriter.py  rdfxmlwriter.py
franz/openrdf/sail/: sail.py
franz/openrdf/tests/: tests.py
franz/openrdf/util/: strings.py  uris.py
franz/openrdf/vocabulary/: rdfs.py  xmlschema.py
recipe/: meta.yaml
src/common/: notation3.py
src/franz/: __init__.py  blanknode.py  defaultgraph.py  encodedliteral.py  exceptions.py  literal.py  namedattributelist.py  namespaceregistry.py  node.py  rdfconstants.py  triple.py  util.py  valuenode.py  valueobject.py
src/franz/allegrograph/: allegrograph.py  cursor.py  directcalls.py  encodedliteral.py  namedattributelist.py  open2ag.py  quad.py  startup.py  test.py  upi.py
src/franz/deprecated/: literal.py  namespaceregistry.py  node.py  resourcenode.py  triple.py  valuenode.py  valueobject.py
src/franz/graphtalker/: README.md  __init__.py  _lisp.py  client.py  exceptions.py  models.py
src/franz/graphtalker/tests/: conftest.py  test_abort_e2e.py  test_client.py  test_integration.py  test_lisp.py
src/franz/http/: endpoint.py
src/franz/mcp/: README.md  server.py
src/franz/miniclient/: agjson.py  repository.py  request.py  test.py
src/franz/miniclient/backends/: curl.py  requests.py
src/franz/openrdf/: connect.py  exceptions.py
src/franz/openrdf/model/: __init__.py  literal.py  statement.py  utils.py  value.py  valuefactory.py
src/franz/openrdf/modelimpl/: literalimpl.py  statementimpl.py  valuefactoryimpl.py  valueimpl.py
src/franz/openrdf/query/: dataset.py  pandas_support.py  query.py  queryimpl.py  queryresult.py  queryresultimpl.py  repositoryresult.py
src/franz/transport/: agc.py  agconnection.py  agconnector.py  agdirectconnector.py  agdirectlink.py  agdirectlinkdebug.py  agdtest.cl  agdtest.py
src/franz/wire/: doquery.py  jdbctuples.py  resultreader.py  sparqlserver.cl  test.py  wiretest.py
src/sesame_test/: amino.owl  apitest.py  microamino.owl  nanoamino.owl  sample-bad.rdf  tinyamino.owl
src/test/: Copy of test.py  sample.rdf  test.py
src2/franz/: __init__.py
src2/franz/miniclient/: repository.py  request.py  test.py
src2/franz/openrdf/: exceptions.py
src3/franz/: __init__.py
src3/franz/miniclient/: repository.py  request.py  test.py
stress/: events.sh
stress/bsbm/: bsbm.py
stress/events/: events  monitor.sh
stress/events/tipper/: __init__.py
stress/load/: load
stress3/bsbm/: bsbm.py
stress3/events/: events
stress3/events/tipper/: __init__.py
stress3/load/: load
tutorial/: Copy of tutorial_examples.py  adv_tutorial_examples.py  common_logic_examples.py  football.nt  old_tutorial_examples.py  performance_tests.py  py_api_tutorial.html  py_api_tutorial_v3.html  py_api_tutorial_v4.html  py_api_tutorial_v5.html  py_api_tutorial_v6.html  py_api_tutorial_v9.html  python-API-40.html  python-API.html  python-rules.txt  python-tutorial-40.html  python-tutorial.html  relative_rules.txt  runner.py  stress_tests.py  tutorial_examples.py  tutorial_examples2.py  tutorial_examples_40.py
windows-support/: cjson.pyd  pycurl.pyd  readme.txt
(+126 files in other folders)
