[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src"]
exclude = [
  "**/node_modules",
  "**/_pycache__",
  ".venv/",
]
root = "src"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
pythonPlatform = "All"
verboseOutput = true

[tool.isort]
atomic = true
profile = "black"
src_paths = ["src"]
extend_skip = ["stress", "docs"]
filter_files = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
(
    ^/stress/
    | ^/docs/
)
'''
